.metadata/.plugins/org.eclipse.cdt.ui/TUBU_V4.build.log
00:18:18 **** Incremental Build of configuration Debug for project TUBU_V4 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../FATFS/Target -I../FATFS/App -I../Middlewares/Third_Party/FatFs/src -I"C:/Users/skttr/OneDrive/Desktop/TU-BU-IOT/TUBU_V4/APPLICATION/DUCATI" -I"C:/Users/skttr/OneDrive/Desktop/TU-BU-IOT/TUBU_V4/APPLICATION/lora" -I"C:/Users/skttr/OneDrive/Desktop/TU-BU-IOT/TUBU_V4/APPLICATION/lora/rfm95" -I"C:/Users/skttr/OneDrive/Desktop/TU-BU-IOT/TUBU_V4/APPLICATION/sim7600" -I"C:/Users/skttr/OneDrive/Desktop/TU-BU-IOT/TUBU_V4/APPLICATION/SD_CARD" -I"C:/Users/skttr/OneDrive/Desktop/TU-BU-IOT/TUBU_V4/midlib" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/main.c:27:
C:/Users/skttr/OneDrive/Desktop/TU-BU-IOT/TUBU_V4/APPLICATION/sim7600/sim7600.h:37:1: warning: multi-line comment [-Wcomment]
   37 | // #define SIM7600_PWRKEY_ON(__ME__)                                                     \
      | ^
C:/Users/skttr/OneDrive/Desktop/TU-BU-IOT/TUBU_V4/APPLICATION/sim7600/sim7600.h:45:1: warning: multi-line comment [-Wcomment]
   45 | // #define SIM7600_RESET_ON(__ME__)                                                    \
      | ^
../Core/Src/main.c: In function 'SIM_Init':
../Core/Src/main.c:184:44: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  184 |                 HAL_UART_Transmit(&huart4, "SIM START ERROR: \n",
      |                                            ^~~~~~~~~~~~~~~~~~~~~
      |                                            |
      |                                            char *
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:722:79: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'char *'
  722 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~~~~~~~^~~~~
../Core/Src/main.c:187:44: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  187 |                 HAL_UART_Transmit(&huart4, "SIM START OK: \n",
      |                                            ^~~~~~~~~~~~~~~~~~
      |                                            |
      |                                            char *
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:722:79: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'char *'
  722 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~~~~~~~^~~~~
../Core/Src/main.c: In function 'loraHandle':
../Core/Src/main.c:239:21: error: 'irqLoRaFlag' undeclared (first use in this function)
  239 |                 if (irqLoRaFlag) {
      |                     ^~~~~~~~~~~
../Core/Src/main.c:239:21: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

00:18:19 Build Failed. 2 errors, 4 warnings. (took 878ms)

